--- a/成都词云.html
+++ b/成都词云.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://raw.gitcode.com/ecomfe/echarts-wordcloud/raw/master/dist/echarts-wordcloud.min.js"></script>
@@ -20,7 +21,7 @@
         align-items: center; /* 垂直居中 */
         flex-direction: row;
       }
-
+      
       #info-text {
         flex: 1;
         max-width: 100%; /* 响应式，最大宽度为容器宽度 */
